Update Permitasyon Kombinasyon ödev.ipynb

--- a/Permitasyon Kombinasyon ödev.ipynb
+++ b/Permitasyon Kombinasyon ödev.ipynb
@@ -13,7 +13,7 @@
     "#Soru Permitasyon\n",
     "\n",
     "\n",
-    "#5 arkadaş ön koltukları dolu arabada(3 boş koltuk) kaç farklı şekilde oturabilir?\n",
+    "#5 arkadaş ön koltukları dolu arabada(3 boş koltuk) arka 3 koltuğa 5 arkadaş kaç farklı şekilde oturabilir?\n",
     "\n",
     "\n",
     "\n",
