Update Permitasyon Kombinasyon ödev.ipynb

--- a/Permitasyon Kombinasyon ödev.ipynb
+++ b/Permitasyon Kombinasyon ödev.ipynb
@@ -10,7 +10,7 @@
     "#Permütasyon \"P\" ile tanımlanır ve r tane elemandan oluşan permütasyon dizilişleri \"n'nin r'li permütasyonu\" olarak adlandırılır. Bu durumda n ve r birer doğal sayı ve r sayısı n'den küçük veya n'ye eşit (r≤n) kabul edilir.\n",
     "\n",
     "\n",
-    "#Soru Permitasyon\n",
+    "#Soru:\n",
     "\n",
     "\n",
     "#5 arkadaş ön koltukları dolu arabada(3 boş koltuk) arka 3 koltuğa 5 arkadaş kaç farklı şekilde oturabilir?\n",
