Update Aslınur Furat - 215112007 -Bağımlı Olasılık - Ödev 3.ipynb

--- a/Aslınur Furat - 215112007 -Bağımlı Olasılık - Ödev 3.ipynb
+++ b/Aslınur Furat - 215112007 -Bağımlı Olasılık - Ödev 3.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "#Bağımlı Olasılık:\n",
+    "#Koşullu Olasılık:\n",
     "#Soru: Bir zar ve bir madeni para havaya atılıyor. Budurumda;\n",
     "#Zarın 2 ve paranın tura gelme olasılğı kaçtır.\n",
     "\n",
